# chvi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  ch.cpp  ch.hpp  clean.sh  convex_hull.cpp  convex_hull.hpp  install.sh  log.hpp  main.cpp  main.hpp  pyproject.toml  requirements.txt  setup.py  types.hpp
chvi/: CMakeLists.txt  __init__.py  build.sh  chvi.cpp  chvi.hpp  convex_hull.cpp  convex_hull.hpp  env.hpp  log.hpp  main.cpp  pagmo.cpp  pagmo.hpp  pgc.hpp  profile.sh  slurm-submit-pipeline.sh  slurm-submit.sh  types.hpp  wrapper.pyx
src/: CMakeLists.txt  __init__.py  main.hpp  wrapper.pyx
test/: cython.py  entire_pipeline.py  env.py  manel_chvi.py  manel_convexhull.py  manel_step_2.py  manel_step_3.py  manel_walkroom.py  native.py  parameters.py  test.py
